<resources>
    <string name="app_name">BaatChit</string>
    <string name="enter_email">Enter Email</string>
    <string name="hint">Enter Password</string>
    <string name="login">Login</string>
    <string name="Reset_password">Rest Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Sign_up">Sign Up</string>
    <string name="enter_correct_email">Enter Correct Email</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="user_created_successfully">User Created Successfully</string>
    <string name="signup_failed">Signup Failed : %1$s</string>
    <string name="donthave_account">Don\'t have account</string>
    <string name="dont_have_account">Dont have Account ?</string>
    <string name="failed_to_update_profile">Failed to update profile : %1$s</string>
    <string name="permission_required">Access permission is required</string>
    <string name="save">SAVE</string>
    <string name="logout">LOGOUT</string>
    <string name="change_picture">CHANGE PICTURE</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="photo_removed_successfully">Photo Removed Successfully</string>
    <string name="profile">profile</string>
    <string name="change_password">Change Password</string>
    <string name="password_change_successfully">Password Change Successfully</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="somethingwent_erong">Something Went Wrong :%1$s</string>
    <string name="reset_password_instructions">Reset Password instructions has been sent on email : %1$s</string>
    <string name="retry">RETRY</string>
    <string name="close">Close</string>
    <string name="email_sent_failed">Failed to send email : %1$s</string>
    <string name="resend_timer">Resend in : %1$s</string>
    <string name="loading_please_wait">Please Wait</string>
    <string name="Check_internet_Connection">Check Internet Connection</string>
    <string name="no_internet">No Internet</string>
    <string name="baat_chit">Baat Chit</string>
    <string name="chat">Chat</string>
    <string name="request">Request</string>
    <string name="find">Find</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_chat_list">Chat list will appear here</string>
    <string name="empty_friends_list">Friends list will appear here</string>
    <string name="empty_requests_list">Friend request will appear here</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="send_friend_request">SEND FRIEND REQUEST</string>
    <string name="cancel_request">CANCEL REQUEST</string>
    <string name="failed_to_fetch_friends">Failed to fetch friends : %1$s</string>
    <string name="request_sent_successfully">Request Sent Successfully</string>
    <string name="failed_to_send_reqeust">Failed to send friend request : %1$s</string>
    <string name="failed_to_cancel_reqeust">Failed to Cancel Request : %1$s</string>
    <string name="request_cancelled_successfully">Request Cancelled Succesfully</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="request_denied_successfully">Request Denied Succesfully</string>
    <string name="failed_to_deny_request">Failed to deny request : %1$s</string>
    <string name="failed_to_accept_request">Failed to accept request : %1$s</string>
    <string name="failed_to_fetch_friend_requests">Failed to fetch friend Requests %1$s</string>
    <string name="failed_to_fetch_chat_list">failed to fetch chat list : %1$s</string>
    <string name="enter_message">Enter Message</string>
    <string name="failed_to_send_message">Failed to Send Message : %1$s</string>
    <string name="message_sent_successfully">Message Sent Successully</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="message_deleted_successfully">Message Deleted Successfully</string>
    <string name="failed_to_delete_file">Failed to delete file %1$s</string>
    <string name="failed_to_delete_message">failed to delete message %1$s</string>
    <string name="upload_progress">Uploading %1$s (%2$s %%)</string>
    <string name="download_progress">Downloading %1$s (%2$s %%)</string>
    <string name="failed_to_upload">Failed to upload : %1$s</string>
    <string name="share_with">Share with..</string>
    <string name="view">View</string>
    <string name="failed_to_download">Failed to download file : %1$s</string>
    <string name="failed_to_store_file">Failed to store file</string>
    <string name="file_downloaded_successfully">File Downloaded Successfully</string>
    <string name="failed_to_fetch_friend_list">Failed to fetch friends list : %1$s</string>

    <string name="failed_to_save_device_token">Failed to save device token : $1%s</string>

    <string name="failed_to_send_notification">Failed to send notification : %1$s</string>

</resources>